--- a/Lab15.html
+++ b/Lab15.html
@@ -20,6 +20,10 @@
     <center><a href="Qualifications.html">My Qualifications</a></center>
     <center><a href="Hobbies.html">My Hobbies</a></center>
     <center><a href="Achievements.html">My Achievements</a></center>
+    <h2>Contact me</h2>
+    <a href="https://mail.google.com/mail/u/0/#inbox">pranavivarangaonkar@gmail.com</a>
+    <p>Phone number:9372651477</p>
+
     
 
 
