--- a/Lab15.html
+++ b/Lab15.html
@@ -9,7 +9,7 @@
 <body style="background-color: lightgreen;">
     <center><h1 style="color: aliceblue;background-color: cadetblue;">My Portfolio</h1></center>
     <div>
-    <center><img src="Pranavi.jpg" hieght="500" width="500" style="border:2px solid grey"></center>
+    <center><img src="Pranavi.jpg" hieght="400" width="400" style="border:2px solid grey"></center>
     <center><h2>About me</h2></center>
     <p style="text-align: center; color:purple;font-size: larger;">
         My name is Pranavi Ashutosh Varangaonkar.I am a First Year Computer Engineering student at Zeal College of Engineering.
@@ -20,9 +20,9 @@
     <center><a href="Qualifications.html">My Qualifications</a></center>
     <center><a href="Hobbies.html">My Hobbies</a></center>
     <center><a href="Achievements.html">My Achievements</a></center>
-    <h2>Contact me</h2>
-    <a href="https://mail.google.com">pranavivarangaonkar@gmail.com</a>
-    <p>Phone number:9372651477</p>
+    <div style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;"><h2>Contact me</h2>
+    <a href="https://mail.google.com" style="color: black;">pranavivarangaonkar@gmail.com</a>
+    <p>Phone number:9372651477</p></div>
 
     <footer>
         <p><a href="#top">Back to top</a></p>
